Lab1 Push formatted

--- a/public/gens/c1.html
+++ b/public/gens/c1.html
@@ -9,53 +9,54 @@
 </head>
 
 <body>
-    <header>
-      <p>CORVETTE</p>
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo">
-      <nav>
-        <a href="https://www.instagram.com/corvette/" target="_blank">
-          <img src="/public/img/insta.png" alt="Instagram">
-        </a>
-  
-        <a href="https://www.facebook.com/corvette" target="_blank">
-          <img src="/public/img/facebook.png" alt="Facebook">
-        </a>
-  
-        <a href="https://twitter.com/chevrolet" target="_blank">
-          <img src="/public/img/twitter.png" alt="Twitter/X">
-        </a>
-  
-        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-          <img src="/public/img/youtube.png" alt="YouTube">
-        </a>
-  
-      </nav>
-    </header>
+  <header>
+    <p>CORVETTE</p>
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
+      <a href="https://www.instagram.com/corvette/" target="_blank">
+        <img src="/public/img/insta.png" alt="Instagram">
+      </a>
+
+      <a href="https://www.facebook.com/corvette" target="_blank">
+        <img src="/public/img/facebook.png" alt="Facebook">
+      </a>
+
+      <a href="https://twitter.com/chevrolet" target="_blank">
+        <img src="/public/img/twitter.png" alt="Twitter/X">
+      </a>
+
+      <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+        <img src="/public/img/youtube.png" alt="YouTube">
+      </a>
+
+    </nav>
+  </header>
 
 
-    <div class="keret">
-      <h1>
-        C1
-      </h1>
-    </div>
+  <div class="keret">
+    <h1>
+      C1
+    </h1>
+  </div>
 
-    <p class="intro">
-      The Chevrolet Corvette C1, affectionately known as the "solid-axle" Corvette, represents 
-      the genesis of America's iconic sports car legacy. Bursting onto the automotive scene in 1953, 
-      the Corvette C1 captured the hearts and imaginations of enthusiasts with its sleek design, innovative 
-      engineering, and undeniable performance. As Chevrolet's response to the growing demand for stylish and 
-      high-performance vehicles in the post-war era, the Corvette C1 quickly became a symbol of American 
-      automotive ingenuity and prowess. With its fiberglass body, revolutionary small-block V8 engines, and 
-      timeless styling, the C1 generation laid the foundation for generations of Corvette excellence to come, 
-      leaving an indelible mark on automotive history as one of the most beloved and iconic sports cars of all 
-      time.
-    </p>
+  <p class="intro">
+    The Chevrolet Corvette C1, affectionately known as the "solid-axle" Corvette, represents
+    the genesis of America's iconic sports car legacy. Bursting onto the automotive scene in 1953,
+    the Corvette C1 captured the hearts and imaginations of enthusiasts with its sleek design, innovative
+    engineering, and undeniable performance. As Chevrolet's response to the growing demand for stylish and
+    high-performance vehicles in the post-war era, the Corvette C1 quickly became a symbol of American
+    automotive ingenuity and prowess. With its fiberglass body, revolutionary small-block V8 engines, and
+    timeless styling, the C1 generation laid the foundation for generations of Corvette excellence to come,
+    leaving an indelible mark on automotive history as one of the most beloved and iconic sports cars of all
+    time.
+  </p>
 
-    <p class="interval">
-      1953-1962
-    </p>
+  <p class="interval">
+    1953-1962
+  </p>
 
-    <table>
+  <table>
+    <thead>
       <tr>
         <th scope="col">
           Model
@@ -64,7 +65,8 @@
           Year
         </th scope="col">
       </tr>
-      <tbody>
+    </thead>
+    <tbody>
       <tr>
         <td class="left">
           1953 Corvette
@@ -145,12 +147,14 @@
           1962
         </td>
       </tr>
-      </tbody>
-        
-    </table>
+    </tbody>
+
+  </table>
 
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
-    </div>
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
 </body>
+
+</html>
