--- a/public/gens/c2.html
+++ b/public/gens/c2.html
@@ -9,55 +9,56 @@
 </head>
 
 <body>
-    <header>
-      <p>CORVETTE</p>
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo">
-      <nav>
-        <a href="https://www.instagram.com/corvette/" target="_blank">
-          <img src="/public/img/insta.png" alt="Instagram">
-        </a>
-  
-        <a href="https://www.facebook.com/corvette" target="_blank">
-          <img src="/public/img/facebook.png" alt="Facebook">
-        </a>
-  
-        <a href="https://twitter.com/chevrolet" target="_blank">
-          <img src="/public/img/twitter.png" alt="Twitter/X">
-        </a>
-  
-        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-          <img src="/public/img/youtube.png" alt="YouTube">
-        </a>
-  
-      </nav>
-    </header>
+  <header>
+    <p>CORVETTE</p>
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
+      <a href="https://www.instagram.com/corvette/" target="_blank">
+        <img src="/public/img/insta.png" alt="Instagram">
+      </a>
+
+      <a href="https://www.facebook.com/corvette" target="_blank">
+        <img src="/public/img/facebook.png" alt="Facebook">
+      </a>
+
+      <a href="https://twitter.com/chevrolet" target="_blank">
+        <img src="/public/img/twitter.png" alt="Twitter/X">
+      </a>
+
+      <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+        <img src="/public/img/youtube.png" alt="YouTube">
+      </a>
+
+    </nav>
+  </header>
 
 
-    <div class="keret">
-      <h1>
-        C2
-      </h1>
-    </div>
+  <div class="keret">
+    <h1>
+      C2
+    </h1>
+  </div>
 
-    <p class="intro">
-      The Chevrolet Corvette C2, famously known as the "Mid-Year" Corvette, stands as a hallmark of 
-      automotive excellence and innovation during the 1960s. Introduced in 1963, the C2 generation of 
-      the Corvette marked a revolutionary departure from its predecessor, featuring a stunning, aerodynamic 
-      design that captivated enthusiasts worldwide. With its distinctive Sting Ray styling, including 
-      the iconic split rear window (limited to the 1963 model year), the C2 Corvette exuded an aura of 
-      performance and sophistication unlike anything seen before. Underneath its sleek exterior, the C2 
-      boasted groundbreaking engineering advancements, such as independent rear suspension, further 
-      solidifying its reputation as a true sports car icon. Throughout its production run until 1967, 
-      the Corvette C2 continued to evolve, introducing powerful engine options, refined handling characteristics, 
-      and timeless styling cues that have cemented its status as one of the most coveted and collectible 
-      generations of the Corvette lineage.
-    </p>
+  <p class="intro">
+    The Chevrolet Corvette C2, famously known as the "Mid-Year" Corvette, stands as a hallmark of
+    automotive excellence and innovation during the 1960s. Introduced in 1963, the C2 generation of
+    the Corvette marked a revolutionary departure from its predecessor, featuring a stunning, aerodynamic
+    design that captivated enthusiasts worldwide. With its distinctive Sting Ray styling, including
+    the iconic split rear window (limited to the 1963 model year), the C2 Corvette exuded an aura of
+    performance and sophistication unlike anything seen before. Underneath its sleek exterior, the C2
+    boasted groundbreaking engineering advancements, such as independent rear suspension, further
+    solidifying its reputation as a true sports car icon. Throughout its production run until 1967,
+    the Corvette C2 continued to evolve, introducing powerful engine options, refined handling characteristics,
+    and timeless styling cues that have cemented its status as one of the most coveted and collectible
+    generations of the Corvette lineage.
+  </p>
 
-    <p class="interval">
-      1963-1967
-    </p>
+  <p class="interval">
+    1963-1967
+  </p>
 
-    <table>
+  <table>
+    <thead>
       <tr>
         <th scope="col">
           Model
@@ -66,7 +67,8 @@
           Year
         </th>
       </tr>
-      <tbody>
+    </thead>
+    <tbody>
       <tr>
         <td class="left">
           1963 Corvette Sting Ray
@@ -108,10 +110,12 @@
         </td>
       </tr>
     </tbody>
-    </table>
+  </table>
 
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
-    </div>
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
 </body>
+
+</html>
