--- a/public/gens/c3.html
+++ b/public/gens/c3.html
@@ -9,57 +9,58 @@
 </head>
 
 <body>
-    <header>
-      <p>CORVETTE</p>
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo">
-      <nav>
-        <a href="https://www.instagram.com/corvette/" target="_blank">
-          <img src="/public/img/insta.png" alt="Instagram">
-        </a>
-  
-        <a href="https://www.facebook.com/corvette" target="_blank">
-          <img src="/public/img/facebook.png" alt="Facebook">
-        </a>
-  
-        <a href="https://twitter.com/chevrolet" target="_blank">
-          <img src="/public/img/twitter.png" alt="Twitter/X">
-        </a>
-  
-        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-          <img src="/public/img/youtube.png" alt="YouTube">
-        </a>
-  
-      </nav>
-    </header>
+  <header>
+    <p>CORVETTE</p>
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
+      <a href="https://www.instagram.com/corvette/" target="_blank">
+        <img src="/public/img/insta.png" alt="Instagram">
+      </a>
+
+      <a href="https://www.facebook.com/corvette" target="_blank">
+        <img src="/public/img/facebook.png" alt="Facebook">
+      </a>
+
+      <a href="https://twitter.com/chevrolet" target="_blank">
+        <img src="/public/img/twitter.png" alt="Twitter/X">
+      </a>
+
+      <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+        <img src="/public/img/youtube.png" alt="YouTube">
+      </a>
+
+    </nav>
+  </header>
 
 
-    <div class="keret">
-      <h1>
-        C3
-      </h1>
-    </div>
+  <div class="keret">
+    <h1>
+      C3
+    </h1>
+  </div>
 
-    <p class="intro">
-      The Chevrolet Corvette C3 generation, spanning from 1968 to 1982, epitomizes 
-      the golden era of American muscle cars and represents a timeless symbol of 
-      automotive innovation and style. Introduced in 1968, the C3 Corvette made an 
-      immediate impact with its sleek, elongated design and aggressive stance, capturing 
-      the spirit of the era's automotive aesthetic. With its distinctive chrome bumpers 
-      and iconic hidden headlights, the C3 Corvette quickly became an emblem of automotive 
-      excellence and performance. Underneath its striking exterior, the C3 boasted powerful 
-      engine options, ranging from small-block V8s to potent big-blocks, delivering exhilarating 
-      performance on both the road and the track. Throughout its production, the C3 Corvette 
-      underwent various refinements and updates, including interior enhancements and mechanical 
-      improvements, ensuring its relevance and desirability in an ever-evolving automotive landscape.
-      As one of the longest-running Corvette generations, the C3 remains a cherished classic among 
-      enthusiasts, revered for its enduring legacy and timeless design.
-    </p>
+  <p class="intro">
+    The Chevrolet Corvette C3 generation, spanning from 1968 to 1982, epitomizes
+    the golden era of American muscle cars and represents a timeless symbol of
+    automotive innovation and style. Introduced in 1968, the C3 Corvette made an
+    immediate impact with its sleek, elongated design and aggressive stance, capturing
+    the spirit of the era's automotive aesthetic. With its distinctive chrome bumpers
+    and iconic hidden headlights, the C3 Corvette quickly became an emblem of automotive
+    excellence and performance. Underneath its striking exterior, the C3 boasted powerful
+    engine options, ranging from small-block V8s to potent big-blocks, delivering exhilarating
+    performance on both the road and the track. Throughout its production, the C3 Corvette
+    underwent various refinements and updates, including interior enhancements and mechanical
+    improvements, ensuring its relevance and desirability in an ever-evolving automotive landscape.
+    As one of the longest-running Corvette generations, the C3 remains a cherished classic among
+    enthusiasts, revered for its enduring legacy and timeless design.
+  </p>
 
-    <p class="interval">
-      1968-1982
-    </p>
+  <p class="interval">
+    1968-1982
+  </p>
 
-    <table>
+  <table>
+    <thead>
       <tr>
         <th scope="col">
           Model
@@ -68,7 +69,8 @@
           Year
         </th>
       </tr>
-      <tbody>
+    </thead>
+    <tbody>
       <tr>
         <td class="left">
           1968 Corvette Sting Ray
@@ -189,12 +191,14 @@
           1982
         </td>
       </tr>
-      </tbody>
-        
-    </table>
+    </tbody>
+
+  </table>
 
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
-    </div>
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
 </body>
+
+</html>
