--- a/public/gens/c4.html
+++ b/public/gens/c4.html
@@ -9,57 +9,58 @@
 </head>
 
 <body>
-    <header>
-      <p>CORVETTE</p>
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo">
-      <nav>
-        <a href="https://www.instagram.com/corvette/" target="_blank">
-          <img src="/public/img/insta.png" alt="Instagram">
-        </a>
-  
-        <a href="https://www.facebook.com/corvette" target="_blank">
-          <img src="/public/img/facebook.png" alt="Facebook">
-        </a>
-  
-        <a href="https://twitter.com/chevrolet" target="_blank">
-          <img src="/public/img/twitter.png" alt="Twitter/X">
-        </a>
-  
-        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-          <img src="/public/img/youtube.png" alt="YouTube">
-        </a>
-  
-      </nav>
-    </header>
+  <header>
+    <p>CORVETTE</p>
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
+      <a href="https://www.instagram.com/corvette/" target="_blank">
+        <img src="/public/img/insta.png" alt="Instagram">
+      </a>
+
+      <a href="https://www.facebook.com/corvette" target="_blank">
+        <img src="/public/img/facebook.png" alt="Facebook">
+      </a>
+
+      <a href="https://twitter.com/chevrolet" target="_blank">
+        <img src="/public/img/twitter.png" alt="Twitter/X">
+      </a>
+
+      <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+        <img src="/public/img/youtube.png" alt="YouTube">
+      </a>
+
+    </nav>
+  </header>
 
 
-    <div class="keret">
-      <h1>
-        C4
-      </h1>
-    </div>
+  <div class="keret">
+    <h1>
+      C4
+    </h1>
+  </div>
 
-    <p class="intro">
-      The Chevrolet Corvette C4 generation, spanning from 1984 to 1996, represents 
-      a significant chapter in the Corvette's storied history, marked by technological 
-      innovation and dynamic design evolution. Debuting in 1984, the C4 Corvette 
-      heralded a departure from its predecessors with a sleek, aerodynamic exterior 
-      that embraced contemporary automotive styling trends. Beneath its striking 
-      appearance, the C4 showcased advanced engineering features, including a modernized 
-      chassis with a sophisticated independent suspension system, enhancing both 
-      performance and handling. Throughout its production run, the C4 Corvette 
-      continually evolved, introducing groundbreaking advancements such as electronic 
-      fuel injection, anti-lock brakes, and a digital instrument cluster, solidifying 
-      its status as a pioneer in automotive technology. With its fusion of cutting-edge 
-      design and engineering prowess, the Corvette C4 remains a beloved icon of American 
-      performance, revered by enthusiasts for its timeless appeal and dynamic driving experience.
-    </p>
+  <p class="intro">
+    The Chevrolet Corvette C4 generation, spanning from 1984 to 1996, represents
+    a significant chapter in the Corvette's storied history, marked by technological
+    innovation and dynamic design evolution. Debuting in 1984, the C4 Corvette
+    heralded a departure from its predecessors with a sleek, aerodynamic exterior
+    that embraced contemporary automotive styling trends. Beneath its striking
+    appearance, the C4 showcased advanced engineering features, including a modernized
+    chassis with a sophisticated independent suspension system, enhancing both
+    performance and handling. Throughout its production run, the C4 Corvette
+    continually evolved, introducing groundbreaking advancements such as electronic
+    fuel injection, anti-lock brakes, and a digital instrument cluster, solidifying
+    its status as a pioneer in automotive technology. With its fusion of cutting-edge
+    design and engineering prowess, the Corvette C4 remains a beloved icon of American
+    performance, revered by enthusiasts for its timeless appeal and dynamic driving experience.
+  </p>
 
-    <p class="interval">
-      1987-1996
-    </p>
+  <p class="interval">
+    1987-1996
+  </p>
 
-    <table>
+  <table>
+    <thead>
       <tr>
         <th scope="col">
           Model
@@ -68,7 +69,8 @@
           Year
         </th>
       </tr>
-      <tbody>
+    </thead>
+    <tbody>
       <tr>
         <td class="left">
           1983 Corvette
@@ -117,7 +119,7 @@
           1986
         </td>
       </tr>
-      
+
       <tr>
         <td class="left">
           1990 Corvette
@@ -143,11 +145,13 @@
         </td>
       </tr>
     </tbody>
-        
-    </table>
+
+  </table>
 
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
-    </div>
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
 </body>
+
+</html>
