--- a/public/gens/c5.html
+++ b/public/gens/c5.html
@@ -9,59 +9,60 @@
 </head>
 
 <body>
-    <header>
-      <p>CORVETTE</p>
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo">
-      <nav>
-        <a href="https://www.instagram.com/corvette/" target="_blank">
-          <img src="/public/img/insta.png" alt="Instagram">
-        </a>
-  
-        <a href="https://www.facebook.com/corvette" target="_blank">
-          <img src="/public/img/facebook.png" alt="Facebook">
-        </a>
-  
-        <a href="https://twitter.com/chevrolet" target="_blank">
-          <img src="/public/img/twitter.png" alt="Twitter/X">
-        </a>
-  
-        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-          <img src="/public/img/youtube.png" alt="YouTube">
-        </a>
-  
-      </nav>
-    </header>
+  <header>
+    <p>CORVETTE</p>
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
+      <a href="https://www.instagram.com/corvette/" target="_blank">
+        <img src="/public/img/insta.png" alt="Instagram">
+      </a>
+
+      <a href="https://www.facebook.com/corvette" target="_blank">
+        <img src="/public/img/facebook.png" alt="Facebook">
+      </a>
+
+      <a href="https://twitter.com/chevrolet" target="_blank">
+        <img src="/public/img/twitter.png" alt="Twitter/X">
+      </a>
+
+      <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+        <img src="/public/img/youtube.png" alt="YouTube">
+      </a>
+
+    </nav>
+  </header>
 
 
-    <div class="keret">
-      <h1>
-        C5
-      </h1>
-    </div>
+  <div class="keret">
+    <h1>
+      C5
+    </h1>
+  </div>
 
-    <p class="intro">
-      The Chevrolet Corvette C5 generation, spanning from 1997 to 2004, represents a 
-      bold leap forward in both performance and design for America's iconic sports car. 
-      Introduced in 1997, the C5 Corvette arrived on the scene with a strikingly modern 
-      and aerodynamic exterior, signaling a departure from its predecessors while still 
-      honoring the Corvette's rich heritage. With its sleek lines, pop-up headlights, 
-      and muscular proportions, the C5 Corvette exuded a sense of power and sophistication 
-      that captivated enthusiasts worldwide. Underneath its sleek exterior, the C5 boasted 
-      cutting-edge engineering innovations, including an all-new hydroformed chassis, a 
-      rear-mounted transaxle for improved weight distribution, and advanced suspension 
-      geometry, resulting in exceptional handling and performance capabilities. Equipped 
-      with the potent LS1 V8 engine, the C5 Corvette delivered exhilarating acceleration 
-      and dynamic driving dynamics, cementing its status as a formidable contender in the 
-      sports car arena. As a testament to its enduring legacy, the C5 Corvette remains 
-      celebrated for its blend of performance, style, and technological prowess, earning 
-      its place as one of the most revered generations in Corvette history.
-    </p>
+  <p class="intro">
+    The Chevrolet Corvette C5 generation, spanning from 1997 to 2004, represents a
+    bold leap forward in both performance and design for America's iconic sports car.
+    Introduced in 1997, the C5 Corvette arrived on the scene with a strikingly modern
+    and aerodynamic exterior, signaling a departure from its predecessors while still
+    honoring the Corvette's rich heritage. With its sleek lines, pop-up headlights,
+    and muscular proportions, the C5 Corvette exuded a sense of power and sophistication
+    that captivated enthusiasts worldwide. Underneath its sleek exterior, the C5 boasted
+    cutting-edge engineering innovations, including an all-new hydroformed chassis, a
+    rear-mounted transaxle for improved weight distribution, and advanced suspension
+    geometry, resulting in exceptional handling and performance capabilities. Equipped
+    with the potent LS1 V8 engine, the C5 Corvette delivered exhilarating acceleration
+    and dynamic driving dynamics, cementing its status as a formidable contender in the
+    sports car arena. As a testament to its enduring legacy, the C5 Corvette remains
+    celebrated for its blend of performance, style, and technological prowess, earning
+    its place as one of the most revered generations in Corvette history.
+  </p>
 
-    <p class="interval">
-      1997-2004
-    </p>
+  <p class="interval">
+    1997-2004
+  </p>
 
-    <table>
+  <table>
+    <thead>
       <tr>
         <th scope="col">
           Model
@@ -70,7 +71,8 @@
           Year
         </th>
       </tr>
-      <tbody>
+    </thead>
+    <tbody>
       <tr>
         <td class="left">
           Corvette Stingray
@@ -104,11 +106,13 @@
         </td>
       </tr>
     </tbody>
-        
-    </table>
+
+  </table>
 
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
-    </div>
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
 </body>
+
+</html>
