--- a/public/gens/c6.html
+++ b/public/gens/c6.html
@@ -9,60 +9,61 @@
 </head>
 
 <body>
-    <header>
-      <p>CORVETTE</p>
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo">
-      <nav>
-        <a href="https://www.instagram.com/corvette/" target="_blank">
-          <img src="/public/img/insta.png" alt="Instagram">
-        </a>
-  
-        <a href="https://www.facebook.com/corvette" target="_blank">
-          <img src="/public/img/facebook.png" alt="Facebook">
-        </a>
-  
-        <a href="https://twitter.com/chevrolet" target="_blank">
-          <img src="/public/img/twitter.png" alt="Twitter/X">
-        </a>
-  
-        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-          <img src="/public/img/youtube.png" alt="YouTube">
-        </a>
-  
-      </nav>
-    </header>
+  <header>
+    <p>CORVETTE</p>
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
+      <a href="https://www.instagram.com/corvette/" target="_blank">
+        <img src="/public/img/insta.png" alt="Instagram">
+      </a>
+
+      <a href="https://www.facebook.com/corvette" target="_blank">
+        <img src="/public/img/facebook.png" alt="Facebook">
+      </a>
+
+      <a href="https://twitter.com/chevrolet" target="_blank">
+        <img src="/public/img/twitter.png" alt="Twitter/X">
+      </a>
+
+      <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+        <img src="/public/img/youtube.png" alt="YouTube">
+      </a>
+
+    </nav>
+  </header>
 
 
-    <div class="keret">
-      <h1>
-        C6
-      </h1>
-    </div>
+  <div class="keret">
+    <h1>
+      C6
+    </h1>
+  </div>
 
-    <p class="intro">
-      The Chevrolet Corvette C6 generation, spanning from 2005 to 2013, represents
-      a pinnacle of American automotive engineering, combining exhilarating 
-      performance with modern refinement and design. Introduced in 2005, the 
-      C6 Corvette emerged as a bold evolution of its predecessor, boasting a 
-      sleek and aerodynamic exterior that exuded both style and aggression. 
-      With its signature quad taillights, muscular contours, and sculpted lines, 
-      the C6 Corvette made a powerful statement on the road and the track alike. 
-      Beneath its captivating exterior, the C6 showcased advanced engineering and 
-      performance enhancements, including a robust aluminum chassis, refined suspension 
-      systems, and potent engine options, such as the legendary LS-series V8 engines, 
-      delivering breathtaking acceleration and dynamic handling characteristics. 
-      Throughout its production run, the C6 Corvette continued to evolve, introducing 
-      innovative technologies and refinements that elevated its status as a true 
-      world-class sports car. As a testament to its enduring legacy, the C6 Corvette 
-      remains revered by enthusiasts for its blend of performance, style, and driving 
-      excitement, securing its place as an icon in Corvette history.
-    </p>
+  <p class="intro">
+    The Chevrolet Corvette C6 generation, spanning from 2005 to 2013, represents
+    a pinnacle of American automotive engineering, combining exhilarating
+    performance with modern refinement and design. Introduced in 2005, the
+    C6 Corvette emerged as a bold evolution of its predecessor, boasting a
+    sleek and aerodynamic exterior that exuded both style and aggression.
+    With its signature quad taillights, muscular contours, and sculpted lines,
+    the C6 Corvette made a powerful statement on the road and the track alike.
+    Beneath its captivating exterior, the C6 showcased advanced engineering and
+    performance enhancements, including a robust aluminum chassis, refined suspension
+    systems, and potent engine options, such as the legendary LS-series V8 engines,
+    delivering breathtaking acceleration and dynamic handling characteristics.
+    Throughout its production run, the C6 Corvette continued to evolve, introducing
+    innovative technologies and refinements that elevated its status as a true
+    world-class sports car. As a testament to its enduring legacy, the C6 Corvette
+    remains revered by enthusiasts for its blend of performance, style, and driving
+    excitement, securing its place as an icon in Corvette history.
+  </p>
 
-    <p class="interval">
-      2005-2013
-    </p>
+  <p class="interval">
+    2005-2013
+  </p>
 
-    <table>
+  <table>
+    <thead>
       <tr>
         <th scope="col">
           Model
@@ -71,7 +72,8 @@
           Year
         </th>
       </tr>
-      <tbody>
+    </thead>
+    <tbody>
       <tr>
         <td class="left">
           Corvette Z06
@@ -97,11 +99,13 @@
         </td>
       </tr>
     </tbody>
-        
-    </table>
+
+  </table>
 
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
-    </div>
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
 </body>
+
+</html>
