--- a/public/gens/c8.html
+++ b/public/gens/c8.html
@@ -9,45 +9,56 @@
 </head>
 
 <body>
-    <header>
-      <p>CORVETTE</p>
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo">
-      <nav>
-        <a href="https://www.instagram.com/corvette/" target="_blank">
-          <img src="/public/img/insta.png" alt="Instagram">
-        </a>
-  
-        <a href="https://www.facebook.com/corvette" target="_blank">
-          <img src="/public/img/facebook.png" alt="Facebook">
-        </a>
-  
-        <a href="https://twitter.com/chevrolet" target="_blank">
-          <img src="/public/img/twitter.png" alt="Twitter/X">
-        </a>
-  
-        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-          <img src="/public/img/youtube.png" alt="YouTube">
-        </a>
-  
-      </nav>
-    </header>
+  <header>
+    <p>CORVETTE</p>
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
+      <a href="https://www.instagram.com/corvette/" target="_blank">
+        <img src="/public/img/insta.png" alt="Instagram">
+      </a>
+
+      <a href="https://www.facebook.com/corvette" target="_blank">
+        <img src="/public/img/facebook.png" alt="Facebook">
+      </a>
+
+      <a href="https://twitter.com/chevrolet" target="_blank">
+        <img src="/public/img/twitter.png" alt="Twitter/X">
+      </a>
+
+      <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+        <img src="/public/img/youtube.png" alt="YouTube">
+      </a>
+
+    </nav>
+  </header>
 
 
-    <div class="keret">
-      <h1>
-        C8
-      </h1>
-    </div>
+  <div class="keret">
+    <h1>
+      C8
+    </h1>
+  </div>
 
-    <p class="intro">
-      The Chevrolet Corvette C8 generation marks a revolutionary shift in the storied history of America's legendary sports car. Introduced in 2020, the C8 Corvette shattered tradition by becoming the first production Corvette with a mid-engine layout, signaling a bold leap into the future of automotive performance. With its exotic proportions, sculpted lines, and aggressive stance, the C8 Corvette commands attention like never before, embodying a potent blend of athleticism and sophistication. Beneath its sleek exterior, the C8 boasts cutting-edge engineering innovations, including a lightweight aluminum structure, advanced aerodynamics, and a potent LT2 V8 engine mounted behind the driver for optimal balance and performance. Embracing modern technology, the C8 Corvette features an array of advanced driver assistance systems, a customizable digital cockpit, and a revolutionary dual-clutch transmission, delivering an exhilarating driving experience that pushes the boundaries of performance and precision. As a groundbreaking addition to the Corvette lineage, the C8 Corvette redefines what it means to be an American sports car, setting new standards for performance, innovation, and driving excitement on both the road and track.
-    </p>
+  <p class="intro">
+    The Chevrolet Corvette C8 generation marks a revolutionary shift in the storied history of America's legendary
+    sports car. Introduced in 2020, the C8 Corvette shattered tradition by becoming the first production Corvette with a
+    mid-engine layout, signaling a bold leap into the future of automotive performance. With its exotic proportions,
+    sculpted lines, and aggressive stance, the C8 Corvette commands attention like never before, embodying a potent
+    blend of athleticism and sophistication. Beneath its sleek exterior, the C8 boasts cutting-edge engineering
+    innovations, including a lightweight aluminum structure, advanced aerodynamics, and a potent LT2 V8 engine mounted
+    behind the driver for optimal balance and performance. Embracing modern technology, the C8 Corvette features an
+    array of advanced driver assistance systems, a customizable digital cockpit, and a revolutionary dual-clutch
+    transmission, delivering an exhilarating driving experience that pushes the boundaries of performance and precision.
+    As a groundbreaking addition to the Corvette lineage, the C8 Corvette redefines what it means to be an American
+    sports car, setting new standards for performance, innovation, and driving excitement on both the road and track.
+  </p>
 
-    <p class="interval">
-      2019-
-    </p>
+  <p class="interval">
+    2019-
+  </p>
 
-    <table>
+  <table>
+    <thead>
       <tr>
         <th scope="col">
           Model
@@ -56,7 +67,8 @@
           Year
         </th>
       </tr>
-      <tbody>
+    </thead>
+    <tbody>
       <tr>
         <td class="left">
           Corvette Stingray
@@ -83,13 +95,15 @@
           2023
         </td>
       </tr>
-      
+
     </tbody>
-        
-    </table>
+
+  </table>
 
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
-    </div>
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
 </body>
+
+</html>
