--- a/public/gens/c1.html
+++ b/public/gens/c1.html
@@ -61,9 +61,9 @@
         <th scope="col">
           Model
         </th>
-        <th>
+        <th scope="col">
           Year
-        </th scope="col">
+        </th>
       </tr>
     </thead>
     <tbody>
