--- a/public/game/game.html
+++ b/public/game/game.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
-    <title>Chevrolet Corvette</title>
-    <link rel="icon" type="image/x-icon" href="/public/img/favicon.ico" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/public/style.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="game.css" />
-  </head>
 
-  <body>
-    <header>
-      <p>CORVETTE</p>
-      <!-- Abszolut eleresi utvonal -->
-      <img src="/public/img/gold_logo.png" alt="Corvette Logo" />
-      <nav>
-        <div>
-          <a href="https://www.instagram.com/corvette/" target="_blank">
-            <img src="/public/img/insta.png" alt="Instagram" />
-          </a>
+<head>
+  <title>Chevrolet Corvette</title>
+  <link rel="icon" type="image/x-icon" href="/public/img/favicon.ico">
+  <link rel="stylesheet" type="text/css" media="screen" href="/public/style.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="game.css">
+</head>
 
-          <a href="https://www.facebook.com/corvette" target="_blank">
-            <img src="/public/img/facebook.png" alt="Facebook" />
-          </a>
-
-          <a href="https://twitter.com/chevrolet" target="_blank">
-            <img src="/public/img/twitter.png" alt="Twitter/X" />
-          </a>
-
-          <a href="https://www.youtube.com/@Chevrolet" target="_blank">
-            <img src="/public/img/youtube.png" alt="YouTube" />
-          </a>
-        </div>
-      </nav>
-    </header>
-
-    <div id="gamediv">
+<body>
+  <header>
+    <p>CORVETTE</p>
+    <!-- Abszolut eleresi utvonal -->
+    <img src="/public/img/gold_logo.png" alt="Corvette Logo">
+    <nav>
       <div>
-        <p class="difficulty">Easy</p>
-        <p class="difficulty">Medium</p>
-        <p class="difficulty">Hard</p>
-      </div>
-      <canvas id="gameframe"> </canvas>
-    </div>
-    <script src="game.js"></script>
+        <a href="https://www.instagram.com/corvette/" target="_blank">
+          <img src="/public/img/insta.png" alt="Instagram">
+        </a>
 
-    <div class="bottom">
-      <a href="/public/index.html" class="top">Back to main page</a>
+        <a href="https://www.facebook.com/corvette" target="_blank">
+          <img src="/public/img/facebook.png" alt="Facebook">
+        </a>
+
+        <a href="https://twitter.com/chevrolet" target="_blank">
+          <img src="/public/img/twitter.png" alt="Twitter/X">
+        </a>
+
+        <a href="https://www.youtube.com/@Chevrolet" target="_blank">
+          <img src="/public/img/youtube.png" alt="YouTube">
+        </a>
+      </div>
+    </nav>
+  </header>
+
+  <div id="gamediv">
+    <div>
+      <p class="difficulty">Easy</p>
+      <p class="difficulty">Medium</p>
+      <p class="difficulty">Hard</p>
     </div>
-  </body>
+    <canvas id="gameframe"> </canvas>
+  </div>
+  <script src="game.js"></script>
+
+  <div class="bottom">
+    <a href="/public/index.html" class="top">Back to main page</a>
+  </div>
+</body>
+
 </html>
