--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,21 @@
 <html lang="hu">
 
 <head>
+    <meta charset="UTF-8">
     <title>Online Napló</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
+        <a href="index.html">Online Napló</a>
+    </header>
+
+    <aside>
+        <p><a href="addSubject.html">Tantárgy hozzáadása</a></p>
+        <p><a href="addHomework.html">Házi feladat hozzáadása</a></p>
+        <p><a href="removeSubject.html">Tantárgy törlése</a></p>
+    </aside>
 
 </body>
 
