Lab3, button az input helyett

--- a/public/addHomework.html
+++ b/public/addHomework.html
@@ -30,7 +30,7 @@
             <label>Specifikáció:</label>
             <input type="file" accept="application/pdf" name="hwFile" id="hwFile">
         </div>
-        <input type="submit" value="Feltölt!">
+        <button name="submitButton" type="submit">Feltölt!</button>
     </form>
 
 </body>
