--- a/public/addSubject.html
+++ b/public/addSubject.html
@@ -26,7 +26,7 @@
         <div>
             <textarea name="subjDesc" id="subjDesc" placeholder="Tantárgy Leírása" required></textarea>
         </div>
-        <input type="submit" value="Létrehoz!">
+        <button name="submitButton" type="submit">Létrehoz!</button>
     </form>
 
 </body>
