--- a/public/removeSubject.html
+++ b/public/removeSubject.html
@@ -18,7 +18,7 @@
         <div>
             <label>Tantárgy ID:</label>
             <input type="text" name="delSubject" id="delSubject">
-            <input type="submit" value="Törlés!">
+            <button name="submitButton" type="submit">Törlés!</button>
         </div>
 
     </form>
