--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,19 @@
 <body>
     <header>
         <a href="index.html">Online Napló</a>
+        <nav>
+            <a href="addSubject.html">
+                <p>Tantárgy hozzáadása</p>
+            </a>
+            <a href="addHomework.html">
+                <p>Házi feladat hozzáadása</p>
+            </a>
+            <a href="removeSubject.html">
+                <p>Tantárgy törlése</p>
+            </a>
+        </nav>
     </header>
 
-    <aside>
-        <p><a href="addSubject.html">Tantárgy hozzáadása</a></p>
-        <p><a href="addHomework.html">Házi feladat hozzáadása</a></p>
-        <p><a href="removeSubject.html">Tantárgy törlése</a></p>
-    </aside>
 
 </body>
 
